# libcamera

./: .gitignore  meson.build  meson_options.txt  run-dbg.sh  run-gdb.sh  run-valgrind.sh  run.sh  valgrind-pycamera.supp
include/libcamera/: bound_method.h  camera.h  request.h  signal.h
py/: meson.build
py/pycamera/: __init__.py  meson.build  pymain.cpp
py/test/: run-valgrind.sh  run.sh  test.py  valgrind-pycamera.supp
src/: meson.build
src/libcamera/: camera.cpp  controls.cpp  meson.build  request.cpp
src/libcamera/pipeline/: meson.build
src/libcamera/pipeline/vivid/: meson.build  vivid.cpp
src/py/cam/: cam.py
src/py/examples/: hotplug-monitor.py  itest.py  simple-cam.py  simple-capture.py  simple-continuous-capture.py
src/py/libcamera/: meson.build  py_camera_manager.cpp  py_camera_manager.h  py_color_space.cpp  py_main.cpp
src/py/libcamera/docs/source/: conf.py  index.rst  libcamera.rst  modules.rst
src/py/pycamera/: __init__.py  meson.build  pymain.cpp
src/py/test/: cam.py  cam_kms.py  cam_null.py  cam_qt.py  cam_qtgl.py  run.sh  simplecamera.py  test.py  unittests.py
subprojects/: pybind11.wrap
test/py/: unittests.py
